<?xml version="1.0"?>
<package format="2">
  <name>autoware_camera_lidar_calibrator</name>
  <version>1.12.0</version>
  <description>Autoware CameraLidarCalibration tools, this package includes work from
      http://www.ros.org/wiki/camera_calibration
  </description>
  <maintainer email="abrahammonrroy@yahoo.com">Abraham Monrroy</maintainer>
  <maintainer email="jacob.lambert@tier4.jp">Jacob Lambert</maintainer>
  <author>Jacob Lambert</author>
  <author>Abraham Monrroy</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <exec_depend>image_view2</exec_depend>
  <exec_depend>libqt5-core</exec_depend>

  <test_depend>rostest</test_depend>
</package>
