<?xml version="1.0"?>
<package format="2">
  <name>autoware_launcher</name>
  <version>1.12.0</version>
  <description>The tool for easily launching Autoware</description>
  <maintainer email="isamu.takagi@tier4.jp">Isamu Takagi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python-rospkg</depend>
  <depend>python_qt_binding</depend>
  <depend>rospy</depend>

  <test_depend>rostest</test_depend>
  <test_depend>python-nose</test_depend>
  <test_depend>python-requests</test_depend>
</package>
