<?xml version="1.0"?>
<package format="2">
  <name>data_preprocessor</name>
  <version>1.12.0</version>
  <description>The data_preprocessor package</description>
  <maintainer email="katou01@todo.todo">katou01</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
