<?xml version="1.0"?>
<package format="2">
  <name>kitti_box_publisher</name>
  <version>1.12.0</version>
  <description>The kitti_box_publisher package</description>
  <maintainer email="hoshika@todo.todo">hoshika</maintainer>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
