<?xml version="1.0"?>
<package format="2">
  <name>kitti_launch</name>
  <version>1.12.0</version>
  <description>The kitti_launch package</description>
  <maintainer email="hoshika@todo.todo">hoshika</maintainer>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kitti_player</depend>
  <depend>kitti_box_publisher</depend>
</package>
