<?xml version="1.0" ?>
<package format="2">
  <name>lanelet_aisan_converter</name>
  <version>0.1.0</version>
  <description>This package contains tools to convert between Lanelet2 OSM and Aisan Vector Map.</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>amathutils_lib</depend>
  <depend>geodesy</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>map_file</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>vector_map</depend>
  <depend>vector_map_msgs</depend>

  <test_depend>rostest</test_depend>

  <export></export>
</package>
