<?xml version="1.0"?>
<package format="2">
  <name>map_tools</name>
  <version>1.12.0</version>
  <description>The map_tools package</description>
  <maintainer email="yuki@ertl.jp">kitsukawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
