<?xml version="1.0"?>
<package format="2">
  <name>mqtt_socket</name>
  <version>1.12.0</version>
  <description>The mqtt_socket package</description>
  <maintainer email="yuki.iida@tier4.jp">yuki-iida</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_can_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>mosquitto-dev</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tablet_socket_msgs</depend>
  <depend>yaml-cpp</depend>
</package>
