<?xml version="1.0"?>
<package format="2">
  <name>oculus_socket</name>
  <version>1.12.0</version>
  <description>The oculus_socket package</description>
  <maintainer email="ni519@todo.todo">Yamada K</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
