<?xml version="1.0"?>
<package format="2">
  <name>pc2_downsampler</name>
  <version>1.12.0</version>
  <description>The pc2_downsampler package</description>
  <maintainer email="hironari.yashiro@tier4.jp">hironariyashiro</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
