<?xml version="1.0"?>
<package format="2">
  <name>rosbag_controller</name>
  <version>1.12.0</version>
  <description>The RosbagController package</description>
  <maintainer email="tu.chenxi@g.sp.m.is.nagoya-u.ac.jp">tu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>boost</depend>
  <depend>cpp_common</depend>
  <depend>python-imaging</depend>
  <depend>rosbag_storage</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>rviz</depend>
  <depend>topic_tools</depend>
  <depend>xmlrpcpp</depend>
  <depend>yaml-cpp</depend>
  
  <exec_depend>python-rospkg</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
